# bbb-pru-control

./: .gitmodules  CMakeLists.txt  README.md  config_main.cpp  prussdrvcxx.cpp  prussdrvcxx.h  rp_main.cpp  uio_main.cpp
common/: CMakeLists.txt  pru.cpp  pru.h
rp/: CMakeLists.txt  prurp.cpp  prurp.h  rpmsg.cpp  rpmsg.h
uio/: CMakeLists.txt  prussdrvcxx.cpp  prussdrvcxx.h
usermode/: CMakeLists.txt  gpio_config.cpp  gpio_config.h  gpio_def.cpp  gpio_def.h  gpio_direct.cpp  gpio_direct.h  gpio_sysfs.cpp  gpio_sysfs.h
usermode/mem/: adctsc.cpp  adctsc.h  cm_per.cpp  cm_per.h  control_module.cpp  control_module.h  gpio.cpp  gpio.h  peripheral.cpp  peripheral.h  pruss.cpp  pruss.h  pwmss.cpp  pwmss.h  tscadcss.cpp  tscadcss.h
usermode/sysfs/: gpio.cpp  gpio.h
